--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.3",
     "sass": "^1.60.0",
     "shortid": "^2.2.16",
     "web-vitals": "^2.1.4"
