--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
     "jsonwebtoken": "^9.0.0",
+    "kladrapi-for-node": "^0.0.2",
     "mongoose": "^7.0.5"
   }
 }
